force-app/main/default/objects/Opportunity/fields/Account_Association__c.field-meta.xml
<CustomField>
    <fullName>Account_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account Association.</description>
    <label>Account Association</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Account_Associations__c.Account__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Associations__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>