force-app/main/default/objects/Opportunity/fields/Account_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Tax_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tax Number of Number</description>
    <label>Account Tax Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account_Tax_Number__c.Status__c</field>
            <operation>equals</operation>
            <value>Valid</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account_Tax_Number__c</referenceTo>
    <relationshipLabel>Opportunities (Account Tax Number)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>