force-app/main/default/objects/Opportunity/fields/AdditionalCCEmailAddresses__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCCEmailAddresses__c</fullName>
    <label>AdditionalCCEmailAddresses</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>