force-app/main/default/objects/Opportunity/fields/Address_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Status__c</fullName>
    <defaultValue>&quot;Invalid&quot;</defaultValue>
    <description>Address Verification Status from SAP Status</description>
    <inlineHelpText>Address Verification Status from SAP Status</inlineHelpText>
    <label>Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invalid</fullName>
                <default>true</default>
                <label>Invalid</label>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>