force-app/main/default/objects/Opportunity/fields/Agent_s_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Agent_s_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to Identify the Master Agent&apos;s Opportunity for Customer Center and reporting</description>
    <inlineHelpText>Please enter Main Agent&apos;s Opportunity in case of Individual or Sub Agent Opportunity</inlineHelpText>
    <label>Agent&apos;s Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Agent&apos;s Opportunity)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>