force-app/main/default/objects/Opportunity/fields/Alternate_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Invoice_Email__c</fullName>
    <description>This Email reflects in Invoice&apos;s Bill to Email field</description>
    <inlineHelpText>This Email reflects in Invoice&apos;s Bill to Email field.</inlineHelpText>
    <label>Alternate Invoice Email</label>
    <length>150</length>
    <type>Text</type>
</CustomField>