force-app/main/default/objects/Opportunity/fields/Amount_Custom__c.field-meta.xml
<CustomField>
    <fullName>Amount_Custom__c</fullName>
    <description>Converted Amount.</description>
    <formula>IF(ISPICKVAL(CurrencyIsoCode,&apos;BRL&apos;) , 

IF( 
Amount &gt;= 1000000, 
TEXT(FLOOR(Amount / 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
Amount &gt;= 1000, 
RIGHT(TEXT(FLOOR(Amount / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Amount)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(Amount , 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Amount , 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Amount , 1), 2) * 100, 99)) 
) 
, 
IF( Amount &gt;= 1000000, TEXT(FLOOR(Amount / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp; IF( Amount &gt;= 1000, RIGHT(TEXT(FLOOR(Amount / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp; RIGHT(TEXT(FLOOR(Amount)), 3) &amp; 
&quot;.&quot; &amp; IF( MOD(Amount , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(Amount , 1), 2) * 100), TEXT(MIN(ROUND(MOD(Amount , 1), 2) * 100, 99)) 
))</formula>
    <label>Amount(Custom)</label>
    <type>Text</type>
</CustomField>