force-app/main/default/objects/Opportunity/fields/Approved_Rejected_At__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_At__c</fullName>
    <description>Datetime of Approval/Rejection by SSC user.</description>
    <label>Approved/Rejected At</label>
    <type>DateTime</type>
</CustomField>