force-app/main/default/objects/Opportunity/fields/Approved_Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_Rejected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SSC user who Approved/Rejection.</description>
    <label>Approved/Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>