force-app/main/default/objects/Opportunity/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is an explicit field for Bill To Account.</description>
    <label>Bill To Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Accounting_Credit_Hold__c</field>
            <operation>notEqual</operation>
            <value>Hold</value>
        </filterItems>
        <filterItems>
            <field>Account.Accounting_Credit_Hold__c</field>
            <operation>notEqual</operation>
            <value>Warning</value>
        </filterItems>
        <infoMessage>Account Credit Status is On Hold/Warning.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bill To Account)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>