force-app/main/default/objects/Opportunity/fields/Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Billing Contact of Opportunity. Field is Obsolete now.</description>
    <label>Bill To Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.IOM_Contact_Identifier__c</field>
            <operation>equals</operation>
            <value>IOM</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Bill To Contact)</relationshipLabel>
    <relationshipName>Opportunities_Bill_To_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>