force-app/main/default/objects/Opportunity/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <description>Billing To Contact&apos;s Account</description>
    <formula>/*HYPERLINK(&quot;/&quot;+Billing_Contact__r.AccountId, Billing_Contact__r.Account.Name)*/
 HYPERLINK(&quot;/&quot;+ Bill_To_Account__r.Id ,  Bill_To_Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account</label>
    <type>Text</type>
</CustomField>