force-app/main/default/objects/Opportunity/fields/Booth_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Booth_Product_Count__c</fullName>
    <description>Count of booth product on opportunity.</description>
    <label>Booth Product Count</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>