force-app/main/default/objects/Opportunity/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <description>CRM Opportunity Campaign Name</description>
    <label>Campaign Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>