force-app/main/default/objects/Opportunity/fields/Cancellation_Charge_Percentage_Override__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Charge_Percentage_Override__c</fullName>
    <description>Cancellation Charge Percentage Override to Override value from Edition.</description>
    <label>Cancellation Charge Percentage Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>