force-app/main/default/objects/Opportunity/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Contract Number</description>
    <label>Contract Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>