force-app/main/default/objects/Opportunity/fields/Contract_Sign_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sign_Status__c</fullName>
    <description>Contract Signing Status.</description>
    <label>Contract Sign Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>