force-app/main/default/objects/Opportunity/fields/Contract_template_id__c.field-meta.xml
<CustomField>
    <fullName>Contract_template_id__c</fullName>
    <description>Conga Contract Template.</description>
    <formula>Legal_Entity__r.Contract_Template__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract template id</label>
    <type>Text</type>
</CustomField>