force-app/main/default/objects/Opportunity/fields/CRM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CRM_Opportunity__c</fullName>
    <description>CRM Opportunity URL.</description>
    <formula>IF(OR(ISBLANK(Legacy_CRM_Org_URL__c),ISBLANK(Legacy_Opportunity_Id__c)),
&apos;&apos;,
HYPERLINK( Legacy_CRM_Org_URL__c+&apos;/&apos;+Legacy_Opportunity_Id__c , Name ,&quot;_blank&quot;)
)</formula>
    <inlineHelpText>Click on the hyperlink to navigate to the Source/CRM Opportunity</inlineHelpText>
    <label>CRM Opportunity</label>
    <type>Text</type>
</CustomField>