force-app/main/default/objects/Opportunity/fields/Custom_Payment__c.field-meta.xml
<CustomField>
    <fullName>Custom_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Payment of Opportunity</description>
    <label>Custom Payment</label>
    <type>Checkbox</type>
</CustomField>