force-app/main/default/objects/Opportunity/fields/Default_Edition__c.field-meta.xml
<CustomField>
    <fullName>Default_Edition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Edition of Opportunity</description>
    <label>Default Edition</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Edition__c.Edition_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>