force-app/main/default/objects/Opportunity/fields/Discovery_Completed__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Discovery Completed for Opportunity (Not in Use)</description>
    <label>Discovery Completed</label>
    <type>Checkbox</type>
</CustomField>