force-app/main/default/objects/Opportunity/fields/Do_not_activate_Billing__c.field-meta.xml
<CustomField>
    <fullName>Do_not_activate_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if the checkbox is TRUE, then Ordered checkbox can not be checked.</description>
    <inlineHelpText>if the checkbox is TRUE, then Ordered checkbox can not be checked.</inlineHelpText>
    <label>Do not activate Billing</label>
    <type>Checkbox</type>
</CustomField>