force-app/main/default/objects/Opportunity/fields/Do_not_Sent_Invoice_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Sent_Invoice_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the checkbox is checked  then auto invoice email should not be sent to customer.</description>
    <inlineHelpText>If the checknox is checked  then auto invoice email should not be sent to customer.</inlineHelpText>
    <label>Do not Sent Invoice Email</label>
    <type>Checkbox</type>
</CustomField>