force-app/main/default/objects/Opportunity/fields/Edition_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Edition_Start_Date__c</fullName>
    <description>Start date of edition.</description>
    <formula>SBQQ__PrimaryQuote__r.Edition__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edition Start Date</label>
    <type>Date</type>
</CustomField>