force-app/main/default/objects/Opportunity/fields/Event_Cutoff_Date2F__c.field-meta.xml
<CustomField>
    <fullName>Event_Cutoff_Date2F__c</fullName>
    <description>Payment Schedule Cut off Date 3</description>
    <formula>IF(Payment_Schedules__c,SBQQ__PrimaryQuote__r.Edition__r.Cutoff_Date_2__c,SBQQ__PrimaryQuote__r.Edition__r.CutoffDate_2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Cutoff Date 2</label>
    <type>Date</type>
</CustomField>