force-app/main/default/objects/Opportunity/fields/Event_Cutoff_Date_1_F__c.field-meta.xml
<CustomField>
    <fullName>Event_Cutoff_Date_1_F__c</fullName>
    <description>Payment Schedule Cut off Date 2</description>
    <formula>IF( Payment_Schedules__c , SBQQ__PrimaryQuote__r.Edition__r.Cutoff_Date_1__c , SBQQ__PrimaryQuote__r.Edition__r.CutoffDate_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Cutoff Date 1</label>
    <type>Date</type>
</CustomField>