force-app/main/default/objects/Opportunity/fields/Event_Cutoff_Date_3_F__c.field-meta.xml
<CustomField>
    <fullName>Event_Cutoff_Date_3_F__c</fullName>
    <description>Payment Schedule Cut off Date 4</description>
    <formula>IF( Payment_Schedules__c , SBQQ__PrimaryQuote__r.Edition__r.Cutoff_Date_3__c , IF( Payment_Schedule_2__c , SBQQ__PrimaryQuote__r.Edition__r.CutoffDate_3__c , SBQQ__PrimaryQuote__r.Edition__r.Cutoff_Date_3__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Cutoff Date 3</label>
    <type>Date</type>
</CustomField>