force-app/main/default/objects/Opportunity/fields/Event_Cutoff_DateF__c.field-meta.xml
<CustomField>
    <fullName>Event_Cutoff_DateF__c</fullName>
    <description>Payment Schedule Cut off Date 1</description>
    <formula>IF( Payment_Schedules__c ,  SBQQ__PrimaryQuote__r.Edition__r.X50_Cutoff_Date__c, SBQQ__PrimaryQuote__r.Edition__r.CutoffDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Cutoff Date</label>
    <type>Date</type>
</CustomField>