force-app/main/default/objects/Opportunity/fields/Event_Edition_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Edition_Start_Date__c</fullName>
    <description>Edition Start Date</description>
    <formula>SBQQ__PrimaryQuote__r.Edition__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Edition Start Date</label>
    <type>Date</type>
</CustomField>