force-app/main/default/objects/Opportunity/fields/Event_Payment_ScheduleFor__c.field-meta.xml
<CustomField>
    <fullName>Event_Payment_ScheduleFor__c</fullName>
    <description>Payment Schedule from Edition.</description>
    <formula>IF( Payment_Schedules__c , TEXT(Default_Edition__r.Payment_Schedule__c ) , TEXT(Default_Edition__r.Payment_Schedule_2__c) )</formula>
    <label>Default Payment Schedule</label>
    <type>Text</type>
</CustomField>