force-app/main/default/objects/Opportunity/fields/Exhibitor_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Exhibitor_Paid_By__c</fullName>
    <description>1. To check if its a Agent Oppty
2. If Agent, then who is paying for it. 

It will determine the price of the products added on the &quot;Related Oppty&quot;</description>
    <inlineHelpText>Choose only if the Opportunity Created belongs to Agent Account!</inlineHelpText>
    <label>Exhibitor Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exhibitor Paid by Agent</fullName>
            </value>
            <value>
                <fullName>Exhibitor Paid by Exhibitor</fullName>
            </value>
            <value>
                <fullName>Individual Contract</fullName>
            </value>
            <value>
                <fullName>SubAgent Paid By Subagent</fullName>
            </value>
            <value>
                <fullName>SubAgent Paid By Exhibitor</fullName>
            </value>
            <value>
                <fullName>Co-Exhibitor Paid by Exhibitor</fullName>
            </value>
            <value>
                <fullName>Co-Exhibitor Split Pay</fullName>
            </value>
            <value>
                <fullName>Non-Exhibiting Customer</fullName>
            </value>
            <value>
                <fullName>UK Exhibitor VAT Invoicing</fullName>
                <isActive>false</isActive>
                <label>UK Exhibitor VAT Invoicing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>