force-app/main/default/objects/Opportunity/fields/IM_Opportunity_No__c.field-meta.xml
<CustomField>
    <fullName>IM_Opportunity_No__c</fullName>
    <description>Informa Markets Customer facing Opportunity Number and will be sent to the ERP’s / CRM&apos;s</description>
    <formula>IF(ISBLANK(Opportunity_Number_Text__c),Opportunity_Number__c,Opportunity_Number_Text__c)</formula>
    <label>IM Opportunity No</label>
    <type>Text</type>
</CustomField>