force-app/main/default/objects/Opportunity/fields/Invoice_to_be_issued_before_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Invoice_to_be_issued_before_in_Days__c</fullName>
    <description>The field is to be used to drive the invoice start date as per the cut off dates created on the edition. The field will subtract the entered number of days from the Cut off dates and will change the payment plan on contract based on the date on which it gets generated between the Invoicing to Start Date and Cut off Date.</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>