force-app/main/default/objects/Opportunity/fields/IOM_AdditionalCCEmailAddresses__c.field-meta.xml
<CustomField>
    <fullName>IOM_AdditionalCCEmailAddresses__c</fullName>
    <label>AdditionalCCEmailAddresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>