force-app/main/default/objects/Opportunity/fields/IOM_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>IOM_Approval_Status__c</fullName>
    <description>This field is used to show approval status in the case of Sanctioned Amber Countries Accounts
before Close Winning the Opportunity. &amp; In the case of normal Countries, Approval is not Required.</description>
    <label>IOM Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval not Required</fullName>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>In-Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>