force-app/main/default/objects/Opportunity/fields/IOM_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>IOM_Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IOM Billing Account</description>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Bill to Account)</relationshipLabel>
    <relationshipName>BillingOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>