force-app/main/default/objects/Opportunity/fields/IOM_Custom_Billing_Info__c.field-meta.xml
<CustomField>
    <fullName>IOM_Custom_Billing_Info__c</fullName>
    <description>Custom Billing Info JSON. which will be used to generate custom payment transactions in IOM</description>
    <label>Custom Billing Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>