force-app/main/default/objects/Opportunity/fields/IOM_Custom_Billing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>IOM_Custom_Billing_Instructions__c</fullName>
    <description>Custom Billing Instructions</description>
    <label>Custom Billing Instructions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>