force-app/main/default/objects/Opportunity/fields/IOM_Do_not_send_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>IOM_Do_not_send_for_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checked then Opportunity will not be send to IOM for Billing.</description>
    <label>Do not send to IOM for Billing</label>
    <type>Checkbox</type>
</CustomField>