force-app/main/default/objects/Opportunity/fields/IOM_Is_Barter_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>IOM_Is_Barter_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checkbox is checked then opportunity is a barter deal.</description>
    <label>IOM Is Barter Opportunity</label>
    <type>Checkbox</type>
</CustomField>