force-app/main/default/objects/Opportunity/fields/IOM_Is_Custom_Billing_Required__c.field-meta.xml
<CustomField>
    <fullName>IOM_Is_Custom_Billing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if Custom Billing Required</description>
    <inlineHelpText>By selecting this checkbox you will need to enter the reason in field ‘Custom Billing Instructions’ and this opportunity will require approval in IOM before it is processed and the invoice is generated.</inlineHelpText>
    <label>Is Custom Billing Required?</label>
    <type>Checkbox</type>
</CustomField>