force-app/main/default/objects/Opportunity/fields/IOM_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>IOM_Opportunity__c</fullName>
    <formula>HYPERLINK( $CustomMetadata.IOM_Global_Configuration_Data__mdt.IOM_Lightning_Redirect_URL.IOM_Value__c+&apos;/apex/&apos;+$CustomMetadata.IOM_Global_Configuration_Data__mdt.IOM_View_Opportunity_VF.IOM_Value__c+&apos;?iomoppno=&apos;+ IOM_Opportunity_No__c   , IOM_Opportunity_No__c,&apos;_blank&apos;)</formula>
    <inlineHelpText>Click on the hyperlink to navigate to the Opportunity Record</inlineHelpText>
    <label>IOM Opportunity</label>
    <type>Text</type>
</CustomField>