force-app/main/default/objects/Opportunity/fields/IOM_Opportunity_No__c.field-meta.xml
<CustomField>
    <fullName>IOM_Opportunity_No__c</fullName>
    <description>IOM Opportunity Number [External Id]</description>
    <externalId>true</externalId>
    <label>IOM Opportunity No</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>