force-app/main/default/objects/Opportunity/fields/IOM_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>IOM_Payment_Term__c</fullName>
    <description>Terms that govern payment of the items</description>
    <inlineHelpText>This field allows you to set the default payment term for an opportunity which will determine the due date of any related invoices.</inlineHelpText>
    <label>Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due on receipt</fullName>
            </value>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>