force-app/main/default/objects/Opportunity/fields/IOM_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>IOM_PO_Number__c</fullName>
    <description>PO Number of opportunity.</description>
    <label>IOM PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>