force-app/main/default/objects/Opportunity/fields/IOM_Ready_For_Ordering__c.field-meta.xml
<CustomField>
    <fullName>IOM_Ready_For_Ordering__c</fullName>
    <description>IOM Ready For Ordering to initiate payload creation process</description>
    <label>IOM Ready For Ordering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>