force-app/main/default/objects/Opportunity/fields/IOM_Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>IOM_Rejection_Notes__c</fullName>
    <description>Rejection Notes</description>
    <label>Rejection Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>