force-app/main/default/objects/Opportunity/fields/IOM_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>IOM_Rejection_Reason__c</fullName>
    <description>IOM Rejection Reason</description>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Rejected</fullName>
            </value>
            <value>
                <fullName>Incorrect Product or Event</fullName>
                <isActive>false</isActive>
                <label>Incorrect Product or Event</label>
            </value>
            <value>
                <fullName>No signature on contract</fullName>
                <isActive>false</isActive>
                <label>No signature on contract</label>
            </value>
            <value>
                <fullName>Other - Comment box will be provided for further explanation</fullName>
                <isActive>false</isActive>
                <label>Other - Comment box will be provided for further explanation</label>
            </value>
            <value>
                <fullName>Quantity Doesn&apos;t Match</fullName>
                <isActive>false</isActive>
                <label>Quantity Doesn&apos;t Match</label>
            </value>
            <value>
                <fullName>Wrong Account/Contact Information</fullName>
                <isActive>false</isActive>
                <label>Wrong Account/Contact Information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>