force-app/main/default/objects/Opportunity/fields/IOM_Sync_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>IOM_Sync_Error_Message__c</fullName>
    <description>Sync Error Message if any while sending opportunity to IOM for billing</description>
    <label>IOM Sync Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>