force-app/main/default/objects/Opportunity/fields/IOM_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>IOM_Sync_Status__c</fullName>
    <description>Sync staus of sending opportunity to IOM for billing</description>
    <label>IOM Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IOM_Sync_Status</valueSetName>
    </valueSet>
</CustomField>