force-app/main/default/objects/Opportunity/fields/IOM_Validation_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>IOM_Validation_Error_Message__c</fullName>
    <description>IOM Payload Validation Error Message</description>
    <label>IOM Validation Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>