force-app/main/default/objects/Opportunity/fields/IOM_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>IOM_Validation_Status__c</fullName>
    <description>IOM payload Validation Status</description>
    <label>IOM Validation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>