force-app/main/default/objects/Opportunity/fields/Is_a_Local_Company__c.field-meta.xml
<CustomField>
    <fullName>Is_a_Local_Company__c</fullName>
    <description>If Account&apos;s Billing country and Series&apos;s Local country is same then it will be true.</description>
    <formula>AND(IF( LOWER(Account.BillingCountry)  =  LOWER(TEXT(Series__r.Local_Country__c)) , true, false),  Series__r.Not_By_pass_Local_Template__c  )</formula>
    <label>Is a Local Company</label>
    <type>Checkbox</type>
</CustomField>