force-app/main/default/objects/Opportunity/fields/Is_Amend_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Amend_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check this checkbox on master opportunity once user create amend quote as per ticket LTN-144.</description>
    <inlineHelpText>This field is used to check this checkbox on master opportunity once user create amend quote.</inlineHelpText>
    <label>Is Amend Opportunity</label>
    <type>Checkbox</type>
</CustomField>