force-app/main/default/objects/Opportunity/fields/Is_Check_Barter_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Check_Barter_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checkbox is checked then opportunity is a barter deal.</description>
    <label>Is Check Barter Opportunity</label>
    <type>Checkbox</type>
</CustomField>