force-app/main/default/objects/Opportunity/fields/Is_Custom_Billing_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Custom_Billing_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom Billing Required</description>
    <label>Is Custom Billing Required?</label>
    <type>Checkbox</type>
</CustomField>