force-app/main/default/objects/Opportunity/fields/IsAmendContractOpp__c.field-meta.xml
<CustomField>
    <fullName>IsAmendContractOpp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Checkbox is checked then opportunity is an amendment opportunity.</description>
    <label>IsAmendContractOpp</label>
    <type>Checkbox</type>
</CustomField>