force-app/main/default/objects/Opportunity/fields/ISO_Code_Logo__c.field-meta.xml
<CustomField>
    <fullName>ISO_Code_Logo__c</fullName>
    <description>Currency Logo.</description>
    <formula>IF( TEXT(CurrencyIsoCode) = &apos;USD&apos;,&apos;$ &apos;, 
IF( TEXT(CurrencyIsoCode) = &apos;EUR&apos;,&apos;€ &apos;,
IF( TEXT(CurrencyIsoCode) = &apos;GBP&apos;,&apos;£ &apos;, 
IF( TEXT(CurrencyIsoCode) = &apos;AED&apos;,&apos;د.إ &apos;, 
IF( TEXT(CurrencyIsoCode) = &apos;BRL&apos;,&apos;R$ &apos;, 
&apos;&apos;)))))</formula>
    <label>ISO Code Logo</label>
    <type>Text</type>
</CustomField>